--- a/liquidwar6/doc/Makefile.in
+++ b/liquidwar6/doc/Makefile.in
@@ -1017,7 +1017,7 @@ install-data-local:
 uninstall-local: 
 	rm -r -f $(DESTDIR)$(docdir)
 
-@LW6_GDOC_TRUE@$(srcdir)/liquidwar6-gdoc.texi: ../src/lib/lw6-callback.c ../src/lib/lw6-control.c ../src/lib/lw6-funcs.c ../src/lib/lw6-global.c ../src/lib/lw6-main.c ../src/lib/lw6-options.c ../src/lib/lw6-print.c ../src/lib/lw6-smobs.c ../src/lib/lw6-test.c ../src/lib/lw6-testmain.c
+@LW6_GDOC_TRUE@$(srcdir)/liquidwar6-gdoc.texi: ../src/lib/lw6-callback.c ../src/lib/lw6-control.c ../src/lib/lw6-fix.c ../src/lib/lw6-funcs.c ../src/lib/lw6-global.c ../src/lib/lw6-main.c ../src/lib/lw6-options.c ../src/lib/lw6-print.c ../src/lib/lw6-smobs.c ../src/lib/lw6-test.c ../src/lib/lw6-testmain.c
 @LW6_GDOC_TRUE@	echo gdoc  && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/liquidwar6-gdoc.texi
 
 @LW6_GDOC_TRUE@$(srcdir)/bot-gdoc.texi: ../src/lib/bot/bot-api.c ../src/lib/bot/bot.h ../src/lib/bot/bot-register.c ../src/lib/bot/bot-test.c ../src/lib/bot/bot-testmain.c
