--- a/liquidwar6/data/Makefile.in
+++ b/liquidwar6/data/Makefile.in
@@ -302,7 +302,7 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = icon gfx snd net
+SUBDIRS = icon gfx snd net p2p
 all: all-recursive
 
 .SUFFIXES:
