Makefile.in regeneration

--- a/liquidwar6/pkg/Makefile.in
+++ b/liquidwar6/pkg/Makefile.in
@@ -488,7 +488,7 @@ clean-local:
 targz: ../@PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
 
 ../@PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz:
-	echo "run make dist in parent directory to (re)build ../@PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz" && false
+	make -C .. dist
 
 liquidwar6.exe:
 	echo "Copy src/.libs/liquidwar6.exe here" && false
