--- a/liquidwar6/src/lib/sys/Makefile.in
+++ b/liquidwar6/src/lib/sys/Makefile.in
@@ -81,24 +81,26 @@ LTLIBRARIES = $(noinst_LTLIBRARIES)
 libsys_la_LIBADD =
 am__libsys_la_SOURCES_DIST = sys-arg.c sys-assoc.c sys-bazooka.c \
 	sys-build.c sys-checksum.c sys-color.c sys-convert.c \
-	sys-debug.c sys-dump.c sys-env.c sys-file.c sys-global.c \
-	sys-profiler.c sys-hash.c sys-hexa.c sys-history.c sys-i18n.c \
-	sys-id.c sys-keyword.c sys-list.c sys-log.c sys-math.c \
-	sys-mem.c sys-mutex.c sys-nop.c sys-options.c sys-path.c \
-	sys-print.c sys-progress.c sys-random.c sys-sdl.c sys-serial.c \
-	sys-shape.c sys-sort.c sys-spinlock.c sys-str.c sys-test.c \
-	sys-thread.c sys-time.c sys-vthread.c sys-testandsetx86.s
+	sys-debug.c sys-dump.c sys-env.c sys-exec.c sys-file.c \
+	sys-global.c sys-profiler.c sys-hash.c sys-hexa.c \
+	sys-history.c sys-i18n.c sys-id.c sys-keyword.c sys-list.c \
+	sys-log.c sys-math.c sys-mem.c sys-mutex.c sys-nop.c \
+	sys-options.c sys-path.c sys-print.c sys-progress.c \
+	sys-random.c sys-sdl.c sys-serial.c sys-shape.c sys-sort.c \
+	sys-spinlock.c sys-str.c sys-test.c sys-thread.c sys-time.c \
+	sys-vthread.c sys-testandsetx86.s
 @LW6_X86_TRUE@am__objects_1 = sys-testandsetx86.lo
 am_libsys_la_OBJECTS = sys-arg.lo sys-assoc.lo sys-bazooka.lo \
 	sys-build.lo sys-checksum.lo sys-color.lo sys-convert.lo \
-	sys-debug.lo sys-dump.lo sys-env.lo sys-file.lo sys-global.lo \
-	sys-profiler.lo sys-hash.lo sys-hexa.lo sys-history.lo \
-	sys-i18n.lo sys-id.lo sys-keyword.lo sys-list.lo sys-log.lo \
-	sys-math.lo sys-mem.lo sys-mutex.lo sys-nop.lo sys-options.lo \
-	sys-path.lo sys-print.lo sys-progress.lo sys-random.lo \
-	sys-sdl.lo sys-serial.lo sys-shape.lo sys-sort.lo \
-	sys-spinlock.lo sys-str.lo sys-test.lo sys-thread.lo \
-	sys-time.lo sys-vthread.lo $(am__objects_1)
+	sys-debug.lo sys-dump.lo sys-env.lo sys-exec.lo sys-file.lo \
+	sys-global.lo sys-profiler.lo sys-hash.lo sys-hexa.lo \
+	sys-history.lo sys-i18n.lo sys-id.lo sys-keyword.lo \
+	sys-list.lo sys-log.lo sys-math.lo sys-mem.lo sys-mutex.lo \
+	sys-nop.lo sys-options.lo sys-path.lo sys-print.lo \
+	sys-progress.lo sys-random.lo sys-sdl.lo sys-serial.lo \
+	sys-shape.lo sys-sort.lo sys-spinlock.lo sys-str.lo \
+	sys-test.lo sys-thread.lo sys-time.lo sys-vthread.lo \
+	$(am__objects_1)
 libsys_la_OBJECTS = $(am_libsys_la_OBJECTS)
 am__installdirs = "$(DESTDIR)$(libexecdir)" "$(DESTDIR)$(libsysdir)"
 PROGRAMS = $(libexec_PROGRAMS)
@@ -345,7 +347,7 @@ AM_CFLAGS = @LW6_CFLAGS@ @LW6_CONSOLE_ENABLE_CFLAGS@ @MOD_GL_ENABLE_CFLAGS@ @MOD
 AM_LDFLAGS = @LW6_LDFLAGS@ -lm
 @LW6_X86_TRUE@X86_FILES = sys-testandsetx86.s
 noinst_LTLIBRARIES = libsys.la
-libsys_la_SOURCES = sys-arg.c sys-assoc.c sys-bazooka.c sys-build.c sys-checksum.c sys-color.c sys-convert.c sys-debug.c sys-dump.c sys-env.c sys-file.c sys-global.c sys-profiler.c sys-hash.c sys-hexa.c sys-history.c sys-i18n.c sys-id.c sys-keyword.c sys-list.c sys-log.c sys-math.c sys-mem.c sys-mutex.c sys-nop.c sys-options.c sys-path.c sys-print.c sys-progress.c sys-random.c sys-sdl.c sys-serial.c sys-shape.c sys-sort.c sys-spinlock.c sys-str.c sys-test.c sys-thread.c sys-time.c sys-vthread.c $(X86_FILES)
+libsys_la_SOURCES = sys-arg.c sys-assoc.c sys-bazooka.c sys-build.c sys-checksum.c sys-color.c sys-convert.c sys-debug.c sys-dump.c sys-env.c sys-exec.c sys-file.c sys-global.c sys-profiler.c sys-hash.c sys-hexa.c sys-history.c sys-i18n.c sys-id.c sys-keyword.c sys-list.c sys-log.c sys-math.c sys-mem.c sys-mutex.c sys-nop.c sys-options.c sys-path.c sys-print.c sys-progress.c sys-random.c sys-sdl.c sys-serial.c sys-shape.c sys-sort.c sys-spinlock.c sys-str.c sys-test.c sys-thread.c sys-time.c sys-vthread.c $(X86_FILES)
 libsysdir = $(includedir)/@PACKAGE_TARNAME@/sys
 libsys_HEADERS = sys.h sys-gettext.h
 @FULLSTATIC_FALSE@liquidwar6sys_test_SOURCES = sys-testmain.c
@@ -461,6 +463,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-debug.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-dump.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-env.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-exec.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-file.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-global.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-hash.Plo@am__quote@
