Added codename and stamp do doc title page.

--- a/liquidwar6/doc/Makefile.in
+++ b/liquidwar6/doc/Makefile.in
@@ -16,7 +16,7 @@
 @SET_MAKE@
 
 # Liquid War 6 is a unique multiplayer wargame.
-# Copyright (C)  2005, 2006, 2007, 2008, 2009  Christian Mauduit <ufoot@ufoot.org>
+# Copyright (C)  2005, 2006, 2007, 2008, 2009, 2010  Christian Mauduit <ufoot@ufoot.org>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -60,9 +60,9 @@ host_triplet = @host@
 target_triplet = @target@
 DIST_COMMON = $(liquidwar6_TEXINFOS) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.gdoc $(srcdir)/Makefile.in \
-	$(srcdir)/Makefile.selfdoc $(srcdir)/liquidwar6.man.in \
-	$(srcdir)/stamp-vti $(srcdir)/version.texi COPYING mdate-sh \
-	texinfo.tex
+	$(srcdir)/Makefile.selfdoc $(srcdir)/const.texi.in \
+	$(srcdir)/liquidwar6.man.in $(srcdir)/stamp-vti \
+	$(srcdir)/version.texi COPYING mdate-sh texinfo.tex
 subdir = doc
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/gettext.m4 \
@@ -77,7 +77,7 @@ am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
-CONFIG_CLEAN_FILES = liquidwar6.man
+CONFIG_CLEAN_FILES = liquidwar6.man const.texi
 CONFIG_CLEAN_VPATH_FILES =
 SOURCES =
 DIST_SOURCES =
@@ -351,7 +351,7 @@ SUBDIRS = coverage global cyclo example dtd
 info_TEXINFOS = liquidwar6.texi
 gdoc_TEXINFOS = liquidwar6-gdoc.texi bot-gdoc.texi cfg-gdoc.texi cli-gdoc.texi cns-gdoc.texi dsp-gdoc.texi dyn-gdoc.texi fdl.texi gfx-gdoc.texi gpl.texi gui-gdoc.texi hlp-gdoc.texi img-gdoc.texi ker-gdoc.texi ldr-gdoc.texi liquidwar6-gdoc.texi map-gdoc.texi mod-csound-gdoc.texi mod-gl-gdoc.texi mod-httpd-gdoc.texi mod-http-gdoc.texi mod-ogg-gdoc.texi mod-tcpd-gdoc.texi mod-tcp-gdoc.texi mod-udpd-gdoc.texi mod-udp-gdoc.texi net-gdoc.texi p2p-gdoc.texi pil-gdoc.texi snd-gdoc.texi srv-gdoc.texi sys-gdoc.texi tsk-gdoc.texi
 selfdoc_TEXINFOS = quick-selfdoc.texi doc-selfdoc.texi show-selfdoc.texi path-selfdoc.texi players-selfdoc.texi input-selfdoc.texi graphics-selfdoc.texi sound-selfdoc.texi network-selfdoc.texi map-selfdoc.texi map-rules-selfdoc.texi map-hints-selfdoc.texi map-style-selfdoc.texi funcs-selfdoc.texi hooks-selfdoc.texi tuning-selfdoc.texi aliases-selfdoc.texi
-liquidwar6_TEXINFOS = gpl.texi fdl.texi version.texi gdoc.texi $(gdoc_TEXINFOS) $(selfdoc_TEXINFOS)
+liquidwar6_TEXINFOS = gpl.texi fdl.texi version.texi gdoc.texi const.texi stamp.texi $(gdoc_TEXINFOS) $(selfdoc_TEXINFOS)
 man6_MANS = liquidwar6.man
 EXTRA_DIST = COPYING gdoc.pl gdoc-update.sh selfdoc.pl selfdoc-update.sh
 all: all-recursive
@@ -389,6 +389,8 @@ $(ACLOCAL_M4):  $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(am__aclocal_m4_deps):
 liquidwar6.man: $(top_builddir)/config.status $(srcdir)/liquidwar6.man.in
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
+const.texi: $(top_builddir)/config.status $(srcdir)/const.texi.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 
 mostlyclean-libtool:
