--- a/liquidwar6/doc/liquidwar6.man.in
+++ b/liquidwar6/doc/liquidwar6.man.in
@@ -21,7 +21,7 @@ http://www.gnu.org/software/liquidwar6/manual/
 
 .SH
 COPYING
-Copyright (C)  2005, 2006, 2007, 2008, 2009  Christian Mauduit <ufoot@ufoot\.org>
+Copyright (C)  2005, 2006, 2007, 2008, 2009, 2010  Christian Mauduit <ufoot@ufoot\.org>
 .HP 0
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
