--- a/liquidwar6/src/lib/ker/Makefile.in
+++ b/liquidwar6/src/lib/ker/Makefile.in
@@ -83,7 +83,7 @@ am_libker_la_OBJECTS = ker-armies.lo ker-capture.lo ker-cursor.lo \
 	ker-cursorarray.lo ker-fighter.lo ker-gamestate.lo \
 	ker-gamestruct.lo ker-history.lo ker-mapstate.lo \
 	ker-mapstruct.lo ker-move.lo ker-placestruct.lo ker-score.lo \
-	ker-scorearray.lo ker-server.lo ker-serverarray.lo \
+	ker-scorearray.lo ker-node.lo ker-nodearray.lo \
 	ker-slotstate.lo ker-slotstruct.lo ker-spread.lo ker-tables.lo \
 	ker-team.lo ker-teammask.lo ker-test.lo ker-trigo.lo \
 	ker-zonestate.lo ker-zonestruct.lo
@@ -330,7 +330,7 @@ top_srcdir = @top_srcdir@
 AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@ 
 noinst_LTLIBRARIES = libker.la
-libker_la_SOURCES = ker-armies.c ker-capture.c ker-cursor.c ker-cursorarray.c ker-fighter.c ker-gamestate.c ker-gamestruct.c ker-history.c ker-mapstate.c ker-mapstruct.c ker-move.c ker-placestruct.c ker-score.c ker-scorearray.c ker-server.c ker-serverarray.c ker-slotstate.c ker-slotstruct.c ker-spread.c ker-tables.c ker-team.c ker-teammask.c ker-test.c ker-trigo.c ker-zonestate.c ker-zonestruct.c
+libker_la_SOURCES = ker-armies.c ker-capture.c ker-cursor.c ker-cursorarray.c ker-fighter.c ker-gamestate.c ker-gamestruct.c ker-history.c ker-mapstate.c ker-mapstruct.c ker-move.c ker-placestruct.c ker-score.c ker-scorearray.c ker-node.c ker-nodearray.c ker-slotstate.c ker-slotstruct.c ker-spread.c ker-tables.c ker-team.c ker-teammask.c ker-test.c ker-trigo.c ker-zonestate.c ker-zonestruct.c
 libkerdir = $(includedir)/@PACKAGE_TARNAME@/ker
 libker_HEADERS = ker.h 
 @FULLSTATIC_FALSE@liquidwar6ker_test_SOURCES = ker-testmain.c
@@ -445,11 +445,11 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-mapstate.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-mapstruct.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-move.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-node.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-nodearray.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-placestruct.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-score.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-scorearray.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-server.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-serverarray.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-slotstate.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-slotstruct.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-spread.Plo@am__quote@
