--- a/liquidwar6/data/p2p/sql/Makefile.in
+++ b/liquidwar6/data/p2p/sql/Makefile.in
@@ -286,7 +286,7 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-pkgdata_DATA = create-database.sql delete-node-by-id.sql insert-node.sql
+pkgdata_DATA = clean-database.sql create-database.sql delete-connection-by-ptr.sql delete-node-by-id.sql insert-connection.sql insert-node.sql select-connection.sql
 EXTRA_DIST = $(pkgdata_DATA)
 all: all-am
 
