Added nod module (does not compile yet).

--- a/liquidwar6/configure.ac
+++ b/liquidwar6/configure.ac
@@ -685,6 +685,7 @@ AC_CONFIG_FILES([Makefile
 	  src/lib/snd/mod-csound/Makefile
 	  src/lib/snd/mod-ogg/Makefile
 	  src/lib/net/Makefile
+	  src/lib/nod/Makefile
 	  src/lib/img/Makefile
 	  src/lib/pil/Makefile
 	  src/lib/cli/Makefile
