--- a/liquidwar6/doc/Makefile.in
+++ b/liquidwar6/doc/Makefile.in
@@ -1064,6 +1064,9 @@ uninstall-local:
 @LW6_GDOC_TRUE@$(srcdir)/net-gdoc.texi: ../src/lib/net/net-address.c ../src/lib/net/net-const.c ../src/lib/net/net-error.c ../src/lib/net/net.h ../src/lib/net/net-if.c ../src/lib/net/net-internal.h ../src/lib/net/net-line.c ../src/lib/net/net-password.c ../src/lib/net/net-setup.c ../src/lib/net/net-socket.c ../src/lib/net/net-tcp.c ../src/lib/net/net-test.c ../src/lib/net/net-testmain.c ../src/lib/net/net-thread.c ../src/lib/net/net-udp.c
 @LW6_GDOC_TRUE@	echo gdoc net && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/net-gdoc.texi
 
+@LW6_GDOC_TRUE@$(srcdir)/nod-gdoc.texi: ../src/lib/nod/nod.h ../src/lib/nod/nod-info.c ../src/lib/nod/nod-test.c ../src/lib/nod/nod-testmain.c
+@LW6_GDOC_TRUE@	echo gdoc nod && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/nod-gdoc.texi
+
 @LW6_GDOC_TRUE@$(srcdir)/p2p-gdoc.texi: ../src/lib/p2p/p2p-data.c ../src/lib/p2p/p2p-db.c ../src/lib/p2p/p2p.h ../src/lib/p2p/p2p-internal.h ../src/lib/p2p/p2p-node.c ../src/lib/p2p/p2p-test.c ../src/lib/p2p/p2p-testmain.c
 @LW6_GDOC_TRUE@	echo gdoc p2p && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/p2p-gdoc.texi
 
@@ -1100,10 +1103,10 @@ uninstall-local:
 @LW6_GDOC_TRUE@$(srcdir)/mod-http-gdoc.texi: ../src/lib/cli/mod-http/mod-http-handshake.c ../src/lib/cli/mod-http/mod-http-info.c ../src/lib/cli/mod-http/mod-http-setup.c ../src/lib/cli/mod-http/mod-http-backend.c ../src/lib/cli/mod-http/mod-http-internal.h ../src/lib/cli/mod-http/mod-http-message.c ../src/lib/cli/mod-http/mod-http-state.c ../src/lib/cli/mod-http/mod-http.h
 @LW6_GDOC_TRUE@	echo gdoc mod-http && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-http-gdoc.texi
 
-@LW6_GDOC_TRUE@$(srcdir)/mod-tcpd-gdoc.texi: ../src/lib/srv/mod-tcpd/mod-tcpd-internal.h ../src/lib/srv/mod-tcpd/mod-tcpd-handshake.c ../src/lib/srv/mod-tcpd/mod-tcpd-backend.c ../src/lib/srv/mod-tcpd/mod-tcpd-message.c ../src/lib/srv/mod-tcpd/mod-tcpd-setup.c ../src/lib/srv/mod-tcpd/mod-tcpd.h ../src/lib/srv/mod-tcpd/mod-tcpd-info.c ../src/lib/srv/mod-tcpd/mod-udpd-oob.c ../src/lib/srv/mod-tcpd/mod-tcpd-oob.c ../src/lib/srv/mod-tcpd/mod-tcpd-state.c
+@LW6_GDOC_TRUE@$(srcdir)/mod-tcpd-gdoc.texi: ../src/lib/srv/mod-tcpd/mod-tcpd-internal.h ../src/lib/srv/mod-tcpd/mod-tcpd-handshake.c ../src/lib/srv/mod-tcpd/mod-tcpd-backend.c ../src/lib/srv/mod-tcpd/mod-tcpd-message.c ../src/lib/srv/mod-tcpd/mod-tcpd-setup.c ../src/lib/srv/mod-tcpd/mod-tcpd.h ../src/lib/srv/mod-tcpd/mod-tcpd-info.c ../src/lib/srv/mod-tcpd/mod-tcpd-oob.c ../src/lib/srv/mod-tcpd/mod-tcpd-state.c
 @LW6_GDOC_TRUE@	echo gdoc mod-tcpd && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-tcpd-gdoc.texi
 
-@LW6_GDOC_TRUE@$(srcdir)/mod-udpd-gdoc.texi: ../src/lib/srv/mod-udpd/mod-udpd-backend.c ../src/lib/srv/mod-udpd/mod-udpd-handshake.c ../src/lib/srv/mod-udpd/mod-udpd-internal.h ../src/lib/srv/mod-udpd/mod-udpd-setup.c ../src/lib/srv/mod-udpd/mod-udpd-state.c ../src/lib/srv/mod-udpd/mod-udpd-message.c ../src/lib/srv/mod-udpd/mod-udpd-info.c ../src/lib/srv/mod-udpd/mod-udpd.h
+@LW6_GDOC_TRUE@$(srcdir)/mod-udpd-gdoc.texi: ../src/lib/srv/mod-udpd/mod-udpd-backend.c ../src/lib/srv/mod-udpd/mod-udpd-handshake.c ../src/lib/srv/mod-udpd/mod-udpd-internal.h ../src/lib/srv/mod-udpd/mod-udpd-setup.c ../src/lib/srv/mod-udpd/mod-udpd-state.c ../src/lib/srv/mod-udpd/mod-udpd-message.c ../src/lib/srv/mod-udpd/mod-udpd-oob.c ../src/lib/srv/mod-udpd/mod-udpd-info.c ../src/lib/srv/mod-udpd/mod-udpd.h
 @LW6_GDOC_TRUE@	echo gdoc mod-udpd && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-udpd-gdoc.texi
 
 @LW6_GDOC_TRUE@$(srcdir)/mod-httpd-gdoc.texi: ../src/lib/srv/mod-httpd/mod-httpd-oob.c ../src/lib/srv/mod-httpd/mod-httpd-internal.h ../src/lib/srv/mod-httpd/mod-httpd-backend.c ../src/lib/srv/mod-httpd/mod-httpd-info.c ../src/lib/srv/mod-httpd/mod-httpd.h ../src/lib/srv/mod-httpd/mod-httpd-message.c ../src/lib/srv/mod-httpd/mod-httpd-state.c ../src/lib/srv/mod-httpd/mod-httpd-handshake.c ../src/lib/srv/mod-httpd/mod-httpd-setup.c
