--- a/liquidwar6/src/lib/srv/Makefile.in
+++ b/liquidwar6/src/lib/srv/Makefile.in
@@ -94,9 +94,9 @@ am__liquidwar6srv_test_SOURCES_DIST = srv-testmain.c
 liquidwar6srv_test_OBJECTS = $(am_liquidwar6srv_test_OBJECTS)
 @ALLINONE_FALSE@am__DEPENDENCIES_2 = ../dyn/libdyn.la
 @FULLSTATIC_FALSE@liquidwar6srv_test_DEPENDENCIES = libsrv.la \
-@FULLSTATIC_FALSE@	$(am__DEPENDENCIES_2) ../net/libnet.la \
-@FULLSTATIC_FALSE@	../cfg/libcfg.la ../hlp/libhlp.la \
-@FULLSTATIC_FALSE@	../sys/libsys.la
+@FULLSTATIC_FALSE@	$(am__DEPENDENCIES_2) ../nod/libnod.la \
+@FULLSTATIC_FALSE@	../net/libnet.la ../cfg/libcfg.la \
+@FULLSTATIC_FALSE@	../hlp/libhlp.la ../sys/libsys.la
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -378,7 +378,7 @@ libsrv_la_SOURCES = srv-api.c srv-control.c srv-oob.c srv-register.c srv-tcpacce
 libsrvdir = $(includedir)/@PACKAGE_TARNAME@/srv
 libsrv_HEADERS = srv.h
 @FULLSTATIC_FALSE@liquidwar6srv_test_SOURCES = srv-testmain.c
-@FULLSTATIC_FALSE@liquidwar6srv_test_LDADD = libsrv.la $(LW6DYN_LIB) ../net/libnet.la ../cfg/libcfg.la ../hlp/libhlp.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
+@FULLSTATIC_FALSE@liquidwar6srv_test_LDADD = libsrv.la $(LW6DYN_LIB) ../nod/libnod.la ../net/libnet.la ../cfg/libcfg.la ../hlp/libhlp.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 SUBDIRS = mod-tcpd mod-udpd mod-httpd
 all: all-recursive
 
